Actualización de página con imágenes de hoteles en las tarjetas

--- a/precios.html
+++ b/precios.html
@@ -24,13 +24,13 @@
                 <a class="nav-link" href="about.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="precios.html">Precios</a>
+                <a class="nav-link active" href="precios.html">Precios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="condiciones.html">Términos y condiciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
